fix: padding advantages and z-index arrow

--- a/src/app/_components/comp.css
+++ b/src/app/_components/comp.css
@@ -156,12 +156,13 @@ h2 {
   display: grid;
   grid-template-columns: repeat(2rem, 1fr);
   gap: 3rem;
-  z-index: 999;
+  z-index: 800;
   padding: 1.5rem;
-  width: 59%;
+  width: 100%;
 }
 .section_ventajas {
   position: relative;
+  padding: 1rem;
   h2 {
     text-align: center;
     padding: 1rem;
